force-app/main/default/objects/MRN__c/MRN__c.object-meta.xml
<CustomObject>
    <label>MRN</label>
    <nameField>
        <displayFormat>MRN-{00000}</displayFormat>
        <label>MRN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRN</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>