force-app/main/default/objects/MRN__c/fields/BOE_Date__c.field-meta.xml
<CustomField>
    <fullName>BOE_Date__c</fullName>
    <label>BOE Date</label>
    <type>Date</type>
</CustomField>