force-app/main/default/objects/MRN__c/fields/BOE_No__c.field-meta.xml
<CustomField>
    <fullName>BOE_No__c</fullName>
    <label>BOE No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>