force-app/main/default/objects/MRN__c/fields/Charges_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charges_Net_Amount__c</fullName>
    <label>Charges Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>