force-app/main/default/objects/MRN__c/fields/clgCharges__c.field-meta.xml
<CustomField>
    <fullName>clgCharges__c</fullName>
    <label>CLG Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>