force-app/main/default/objects/MRN__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <formula>TEXT(Contact_Name__r.Salutation)  + &apos; &apos; +Contact_Name__r.FirstName + &apos; &apos; +  Contact_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person</label>
    <type>Text</type>
</CustomField>