force-app/main/default/objects/MRN__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
                <default>true</default>
                <label>INR</label>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>