force-app/main/default/objects/MRN__c/fields/Custom_Duty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Custom_Duty_Rate__c</fullName>
    <label>Custom Duty Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>