force-app/main/default/objects/MRN__c/fields/Custom_Sur_Rate__c.field-meta.xml
<CustomField>
    <fullName>Custom_Sur_Rate__c</fullName>
    <label>Custom Sur. Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>