force-app/main/default/objects/MRN__c/fields/dcCharges__c.field-meta.xml
<CustomField>
    <fullName>dcCharges__c</fullName>
    <label>DC Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>