force-app/main/default/objects/MRN__c/fields/Dispatch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Mode__c</fullName>
    <label>Dispatch Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>By Hand</fullName>
            </value>
            <value>
                <fullName>By Air</fullName>
            </value>
            <value>
                <fullName>By Road</fullName>
            </value>
            <value>
                <fullName>By Ship</fullName>
            </value>
            <value>
                <fullName>By Train</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>