force-app/main/default/objects/MRN__c/fields/E_Way_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Way_Bill_Date__c</fullName>
    <label>E-Way Bill Date</label>
    <type>Date</type>
</CustomField>