force-app/main/default/objects/MRN__c/fields/E_Way_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>E_Way_Bill_No__c</fullName>
    <label>E-Way Bill No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>