force-app/main/default/objects/MRN__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <formula>Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Id</label>
    <type>Text</type>
</CustomField>