force-app/main/default/objects/MRN__c/fields/Ex_Work_Value__c.field-meta.xml
<CustomField>
    <fullName>Ex_Work_Value__c</fullName>
    <label>Ex Work Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>