force-app/main/default/objects/MRN__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>