force-app/main/default/objects/MRN__c/fields/Freight_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Freight_of_Invoice__c</fullName>
    <formula>IF( AND( Freight__c  &gt; 0, Ex_Work_Value__c  &gt; 0) , Freight__c / Ex_Work_Value__c  , 0)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight % of Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>