force-app/main/default/objects/MRN__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <label>GST Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>