force-app/main/default/objects/MRN__c/fields/GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_No__c</fullName>
    <formula>OEM_Customer__r.GSTIN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN No.</label>
    <type>Text</type>
</CustomField>