force-app/main/default/objects/MRN__c/fields/HAWB_Date__c.field-meta.xml
<CustomField>
    <fullName>HAWB_Date__c</fullName>
    <label>HAWB Date</label>
    <type>Date</type>
</CustomField>