force-app/main/default/objects/MRN__c/fields/HAWB_No__c.field-meta.xml
<CustomField>
    <fullName>HAWB_No__c</fullName>
    <label>HAWB No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>