force-app/main/default/objects/MRN__c/fields/Insurance_of_BOE__c.field-meta.xml
<CustomField>
    <fullName>Insurance_of_BOE__c</fullName>
    <label>Insurance of BOE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.20</fullName>
            </value>
            <value>
                <fullName>1.125</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>