force-app/main/default/objects/MRN__c/fields/Insurance_of_BOE_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_of_BOE_Amount__c</fullName>
    <formula>(VALUE(text(Insurance_of_BOE__c)) * Exchange_Rate__c *  Ex_Work_Value__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance of BOE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>