force-app/main/default/objects/MRN__c/fields/Inv_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Inv_Surcharge__c</fullName>
    <formula>IF( AND( Surcharge__c  &gt; 0,  Ex_Work_Value__c  &gt; 0) , Surcharge__c / Ex_Work_Value__c , 0)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inv Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>