force-app/main/default/objects/MRN__c/fields/L_R_Date__c.field-meta.xml
<CustomField>
    <fullName>L_R_Date__c</fullName>
    <label>L.R. Date</label>
    <type>Date</type>
</CustomField>