force-app/main/default/objects/MRN__c/fields/L_R_No__c.field-meta.xml
<CustomField>
    <fullName>L_R_No__c</fullName>
    <label>L.R. No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>