force-app/main/default/objects/MRN__c/fields/Less_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Less_Insurance__c</fullName>
    <formula>Subtotal_Item_Value_in_INR__c-Subtotal_Assessable_Value_INR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Less Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>