force-app/main/default/objects/MRN__c/fields/MAWB_No__c.field-meta.xml
<CustomField>
    <fullName>MAWB_No__c</fullName>
    <label>MAWB No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>