force-app/main/default/objects/MRN__c/fields/MRN_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>MRN_Delivery_Type__c</fullName>
    <label>MRN Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>