force-app/main/default/objects/MRN__c/fields/MRN_No__c.field-meta.xml
<CustomField>
    <fullName>MRN_No__c</fullName>
    <label>MRN No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>