force-app/main/default/objects/MRN__c/fields/MRN_Number__c.field-meta.xml
<CustomField>
    <fullName>MRN_Number__c</fullName>
    <formula>if( text(Ware_House__r.City__c) == &apos;Kolkata&apos;, &apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;MRN&apos;+RIGHT( Name , LEN(Name) - 4),if( text(Ware_House__r.City__c) == &apos;Gurugram&apos;, &apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;MRN&apos;+RIGHT( Name , LEN(Name) - 4),&apos;Please select warehouse.&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRN Number</label>
    <type>Text</type>
</CustomField>