force-app/main/default/objects/MRN__c/fields/MRN_Number_Date__c.field-meta.xml
<CustomField>
    <fullName>MRN_Number_Date__c</fullName>
    <formula>MRN_Number__c + if( ISNULL( MRN_Date__c ),  &apos;&apos;, &apos; &amp; &apos;+text(MRN_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRN Number &amp; Date</label>
    <type>Text</type>
</CustomField>