force-app/main/default/objects/MRN__c/fields/MRN_Type__c.field-meta.xml
<CustomField>
    <fullName>MRN_Type__c</fullName>
    <label>MRN Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Return</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>