force-app/main/default/objects/MRN__c/fields/No_of_Box_Dimension__c.field-meta.xml
<CustomField>
    <fullName>No_of_Box_Dimension__c</fullName>
    <label>No. of Box &amp; Dimension</label>
    <length>220</length>
    <type>Text</type>
</CustomField>