force-app/main/default/objects/MRN__c/fields/OEM_Customer__c.field-meta.xml
<CustomField>
    <fullName>OEM_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM/Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRN</relationshipLabel>
    <relationshipName>MRN</relationshipName>
    <type>Lookup</type>
</CustomField>