force-app/main/default/objects/MRN__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term(Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>