force-app/main/default/objects/MRN__c/fields/Payment_Terms_Days_NumBer__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Days_NumBer__c</fullName>
    <label>Payment Terms (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>