force-app/main/default/objects/MRN__c/fields/PO_No__c.field-meta.xml
<CustomField>
    <fullName>PO_No__c</fullName>
    <formula>Purchase_Order__r.Purchase_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO No.</label>
    <type>Text</type>
</CustomField>