force-app/main/default/objects/MRN__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRN (Shipping Account)</relationshipLabel>
    <relationshipName>MRN2</relationshipName>
    <type>Lookup</type>
</CustomField>