force-app/main/default/objects/MRN__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>OEM_Customer__r.Billing_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Code</label>
    <type>Text</type>
</CustomField>