force-app/main/default/objects/MRN__c/fields/Subtotal_Assessable_Value_INR__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Assessable_Value_INR__c</fullName>
    <label>Subtotal Assessable Value(INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>