force-app/main/default/objects/MRN__c/fields/Subtotal_Custom_Duty_Amount_INR__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Custom_Duty_Amount_INR__c</fullName>
    <label>Subtotal Custom Duty Amount INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>