force-app/main/default/objects/MRN__c/fields/Subtotal_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Item_Amount__c</fullName>
    <label>Subtotal Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>