force-app/main/default/objects/MRN__c/fields/Subtotal_Item_Value_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Item_Value_in_INR__c</fullName>
    <label>Subtotal Item Value in (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>