force-app/main/default/objects/MRN__c/fields/Sum_Of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Charges__c</fullName>
    <label>Sum Of Charges %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>