force-app/main/default/objects/MRN__c/fields/Supplier_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MRN (Supplier Contact Name)</relationshipLabel>
    <relationshipName>MRN1</relationshipName>
    <type>Lookup</type>
</CustomField>