force-app/main/default/objects/MRN__c/fields/Supplier_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Date__c</fullName>
    <label>Supplier Invoice Date</label>
    <type>Date</type>
</CustomField>