force-app/main/default/objects/MRN__c/fields/Total_Charges_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Charges Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>