force-app/main/default/objects/MRN__c/fields/Total_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Amount__c</fullName>
    <label>Total Item Amount</label>
    <summarizedField>MRN_Line_Item__c.Total_Amount_GBP__c</summarizedField>
    <summaryForeignKey>MRN_Line_Item__c.MRN__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>