force-app/main/default/objects/MRN__c/fields/Weight_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_Shipment__c</fullName>
    <label>Weight of Shipment</label>
    <length>220</length>
    <type>Text</type>
</CustomField>