force-app/main/default/objects/MRN__c/validationRules/MRN_status_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>MRN_status_Received</fullName>
    <active>false</active>
    <errorConditionFormula>Text(PRIORVALUE( Stage__c )) == &apos;Received&apos;  &amp;&amp;  text(Stage__c)!= &apos;Received&apos;</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>The stage cannot update to draft after recevied.</errorMessage>
</ValidationRule>