force-app/main/default/objects/MRN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MRN_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>MRN_Delivery_Type__c</columns>
    <columns>Contact_No__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>