force-app/main/default/objects/MRN__c/listViews/Local_MRN.listView-meta.xml
<ListView>
    <fullName>Local_MRN</fullName>
    <columns>NAME</columns>
    <columns>OEM_Customer__c</columns>
    <columns>MRN_Type__c</columns>
    <columns>MRN_Delivery_Type__c</columns>
    <columns>Contact_No__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MRN_Delivery_Type__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </filters>
    <label>Local MRN</label>
    <sharedTo>
        <group>East_Parts_Team</group>
        <group>North_Parts_Team</group>
    </sharedTo>
</ListView>