force-app/main/default/objects/MRN__c/listViews/Rejected_MRN.listView-meta.xml
<ListView>
    <fullName>Rejected_MRN</fullName>
    <columns>NAME</columns>
    <columns>MRN_Type__c</columns>
    <columns>MRN_Delivery_Type__c</columns>
    <columns>Contact_No__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Reject</value>
    </filters>
    <label>Rejected MRN</label>
    <sharedTo>
        <group>East_Parts_Team</group>
        <group>North_Parts_Team</group>
    </sharedTo>
</ListView>